unpackaged/main/default/objects/Account/fields/Account_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Account_Discount_Percentage__c</fullName>
    <label>Account Discount Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>