unpackaged/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titanium</fullName>
            </value>
            <value>
                <fullName>Plautinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Broze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>